Fixed Facebook carousel, Changed color to blue for left and right, finally got everything to work and not be cut off. Scaling is automatic and it seems to work well.

--- a/index.css
+++ b/index.css
@@ -67,8 +67,8 @@
 }
 
 .carousel-controls.lefts{
-	background-image:-webkit-linear-gradient(left,color-stop(rgba(0,0,0,.5) 0),color-stop(rgba(0,0,0,.0001) 100%));
-	background-image:linear-gradient(to right,rgba(0,0,0,.5) 0,rgba(0,0,0,.0001) 100%);
+	background-image:-webkit-linear-gradient(left,color-stop(rgba(142, 185, 255, 0.5) 0),color-stop(rgba(142, 185, 255,.0001) 100%));
+	background-image:linear-gradient(to right,rgba(142, 185, 255,.5) 0,rgba(142, 185, 255,.0001) 100%);
 	background-repeat:repeat-x;
 	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#80000000', endColorstr='#00000000', GradientType=1)
 }
@@ -76,8 +76,8 @@
 .carousel-controls.rights{
 	left:auto;
 	right:0;
-	background-image:-webkit-linear-gradient(left,color-stop(rgba(0,0,0,.0001) 0),color-stop(rgba(0,0,0,.5) 100%));
-	background-image:linear-gradient(to right,rgba(0,0,0,.0001) 0,rgba(0,0,0,.5) 100%);
+	background-image:-webkit-linear-gradient(left,color-stop(rgba(142, 185, 255,.0001) 0),color-stop(rgba(142, 185, 255,.5) 100%));
+	background-image:linear-gradient(to right,rgba(142, 185, 255,.0001) 0,rgba(142, 185, 255,.5) 100%);
 	background-repeat:repeat-x;
 	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#00000000', endColorstr='#80000000', GradientType=1)
 }
